# cognitive-healium

./: .gitignore  Dockerfile  demo.py  healing_agent.py  healium_plugin.py  mcp_client.py  pyproject.toml  requirements.txt  server.py
.github/workflow/: deploy-frontend.yml
.github/workflows/: ci-tests.yml  deploy-frontend.yml
engine/: __init__.py  dom_capture.py  memory.py  models.py  providers.py  selenium_wrapper.py
frontend/: index.html
static/: dashboard.html
tests/: conftest.py  test_deployed_site.py  test_playwright_healing.py  test_selenium_healing.py
tests/fixtures/: test_page.html
